--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,22 @@ code {
     monospace;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.wrapper a {
+  text-align: center;
+}
+
 .RichEditor-editor {
   padding: 12px;
 }
